# rust-torch-exts

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  pyproject.toml
gpu/: Cargo.toml
gpu/src/: lib.rs
python/rust_torch_exts/: __init__.py
src/: lib.rs
tests/: test_gpt2.py  test_gpt2_ref.py  test_kernels.py  test_whl.py
