[package]
name = "rust_torch_exts"
version = "0.1.0"
edition = "2021"

[lib]
name = "torch_exts"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

[build-dependencies]
cuda_builder = { git = "https://github.com/Rust-GPU/rust-cuda.git", default-features = false }
